feat(api): adjust event abit
